# la-vigie

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  index.html  package-lock.json  package.json  stryker.config.mjs
.github/: dependabot.yml  (+1 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: mutants.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/lavigie-mcp/antigravity/.agents/: mcp_config.json
src-tauri/resources/lavigie-mcp/opencode/: opencode.jsonc
src-tauri/resources/lavigie-plugin/.claude-plugin/: plugin.json
src-tauri/src/: agent_commands.rs  claude_path.rs  commands.rs  docs.rs  launch.rs  lavigie_plugin.rs  lavigie_skills.rs  lib.rs  main.rs  schedule_commands.rs  shell_env.rs  sound_commands.rs  state.rs  teardown.rs  tray.rs
src-tauri/src/agent/: mcp_bundle.rs  mod.rs  models.rs  skill_bundle.rs  spec.rs  status.rs
src-tauri/src/concierge/: mod.rs
src-tauri/src/git/: mod.rs  worktree_state.rs
src-tauri/src/github/: mod.rs
src-tauri/src/github/fixtures/: pr_comments.json  pr_inline_comments.json  pr_view.json
src-tauri/src/hooks/: mod.rs
src-tauri/src/mcp/: authz.rs  mod.rs
src-tauri/src/meeting/: mod.rs
src-tauri/src/remote/: auth.rs  commands.rs  index.html  mod.rs  server.rs  tailscale.rs
src-tauri/src/remote/fixtures/: serve-status-funnel.json  serve-status-no-funnel.json  status.json
src-tauri/src/schedule/: mod.rs
src-tauri/src/session/: mod.rs  question.rs
src-tauri/src/session/fixtures/: ask_user_question.json  transcript_sample.jsonl
src-tauri/src/setup/: mod.rs
src-tauri/src/sound/: mod.rs
src-tauri/src/store/: mod.rs
(+214 files in other folders)
